Fix image transparent background, spacing

--- a/css/main.css
+++ b/css/main.css
@@ -124,8 +124,8 @@ hr.faded-sides {
 }
 
 .landing-container {
-	width: 60%;
-	padding: 5vmin 0vmin;
+	width: 70%;
+	padding: 8vmin 0vmin;
 	margin: 5vmin 0vmin;
 }
 
@@ -134,7 +134,7 @@ hr.faded-sides {
   font-size: 2.75vmin;
   color: #313131;
   line-height: 4vmin;
-  width: 60%;
+  width: 70%;
 }
 
 .landing-text h1 {
@@ -176,7 +176,7 @@ hr.faded-sides {
 
 .flex-portfolio-text {
   margin-bottom: 5vmin;
-	padding: 7vmin;
+	padding: 4vmin 7vmin 5vmin 7vmin;
 }
 
 /* Portfolio */
